# wasm-ping-pong

./: .gitignore  README.md
ping/: .gitignore  Cargo.toml  README.md  wadm.yaml  wasmcloud.toml
ping/src/: lib.rs
ping/wit/: world.wit
pong/: Makefile  codegen.toml  pong.smithy
pong-provider/: Cargo.toml  Makefile  README.md  provider_test_config.toml
pong-provider/src/: main.rs
pong/rust/: Cargo.toml
pong/rust/src/: lib.rs  pong.rs
