[package]
name = "ping"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
wit-bindgen = { version = "0.16", features = ["default"] }
futures = "0.3"
wasmbus-rpc = "0.15"
wasmcloud-interface-httpserver = "0.12"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
wasmcloud-examples-pong = { path="../pong/rust" }