[package]
name = "pong-provider"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
tracing = "0.1.37"
wasmbus-rpc = { version = "0.15", features = ["otel"] }
wasmcloud-interface-httpserver = "0.12"
wasmcloud-examples-pong = {path = "../pong/rust"}

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.9"
tokio = { version = "1", features = [ "full" ] }

[[bin]]
name = "pong_provider"
path = "src/main.rs"
